<resources>
    <string name="app_name">FoodSpot</string>
    <string name="mobile_number">Mobile Number(10 digits)</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up"><u>Don\'t have an account?Sign up now</u></string>
    <string name="enter_your_name">Enter your name(Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="choose_password">Choose a password(Min.4 characters)</string>
    <string name="enter_new_password">Enter new password(Min.4 characters)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">register</string>
    <string name="mobile_number_email">Enter your registered mobile number and email address below :</string>
    <string name="next">Next</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="mobile_number_">Mobile Number :</string>
    <string name="delivery_address_">Delivery Address :</string>
    <string name="password_">Password :</string>
    <string name="go_to_login_page">Go to Login page</string>
    <string name="welcome">WELCOME...</string>
    <string name="log_out">log out</string>
    <string name="change_password">Change Password</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="qn1">I want to explore career opportunities with FoodSpot?</string>
    <string name="ans1">You can send an email to foodspot@gmail.com. we will revert within 24 – 48 hours.</string>

    <string name="qn2">Can I edit my order??</string>
    <string name="ans2">Your order can be edited before it reaches the restaurant. You could contact customer support team via chat or call to do so. Once order is placed and restaurant starts preparing your food, you may not edit its contents.</string>

    <string name="qn3">I want to cancel my order?</string>
    <string name="ans3">We will do our best to accommodate your request if the order is not placed to the restaurant. Please note that we will have a right to charge a cancellation fee up to full order value to compensate our restaurant and delivery partners if your order has been confirmed..</string>

    <string name="qn4">Will FoodSpot be accountable for quality/quantity?</string>
    <string name="ans4">Quantity and quality of the food is the restaurants\' responsibility. However in case of issues with the quality or quantity, kindly submit your feedback and we will pass it on to the restaurant..</string>

    <string name="qn5">Is there a minimum order value?</string>
    <string name="ans5">We have no minimum order value and you can order for any amount.</string>

    <string name="qn6">Do you charge for delivery?</string>
    <string name="ans6">Delivery fee varies from city to city and is applicable if order value is below a certain amount. Additionally, certain restaurants might have fixed delivery fees.</string>

    <string name="qn7">How long do you take to deliver?</string>
    <string name="ans7">Standard delivery times vary by the location selected and prevailing conditions. Once you select your location, an estimated delivery time is mentioned for each restaurant.</string>

    <string name="qn8">What are your delivery hours?</string>
    <string name="ans8">Our delivery hours vary for different locations and depends on availability of supply from restaurant partners.</string>

    <string name="qn9">Can I order from any location?</string>
    <string name="ans9">We will deliver from any restaurant listed on the search results for your location. We recommend enabling your GPS location finder and letting the app auto-detect your location.</string>

    <string name="qn10">Is single order from many restaurants possible?</string>
    <string name="ans10">We currently do not support this functionality. However, you can place orders for individual items from different restaurants.</string>

    <string name="qn11">Do you support bulk orders?</string>
    <string name="ans11">In order to provide all customers with a great selection and to ensure on time delivery of your meal, we reserve the right to limit the quantities depending on supply.</string>

    <string name="qn12">Can I order in advance?</string>
    <string name="ans12">We currently do not support this functionality. All our orders are placed and executed on-demand.</string>

    <string name="qn13">Did not receive referral coupon?</string>
    <string name="ans13">Referral coupon is given upon the first successful transaction of the referred person. If you still have not received it, kindly send us your details at foodspot@gmail.com. We will contact you within 48 hours.</string>

    <string name="qn14">Unable to view the details in my profile?</string>
    <string name="ans14">Please check if your app is due for an update. If not, please share the details via foodspot@gmail.com.</string>

    <string name="qn15">Do you accept Sodexo, Ticket Restaurant etc.?</string>
    <string name="ans15">We do not accept Sodexo vouchers but we do accept Sodexo card. You can select the Sodexo card option while selecting payment options at the time of order.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">No internet connection. Make sure your wifi or mobile data is turned on.</string>
    <string name="exit">EXIT</string>
    <string name="otp">OTP (4 characters)</string>
    <string name="defaultName">Name</string>
    <string name="defaultMobile">+91-9998888777</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faq">FAQ</string>
    <string name="logOut">Log Out</string>
    <string name="retry">RETRY</string>
    <string name="choose_from_the_menu_listed_below">Choose from the menu listed below:</string>
    <string name="proceed_to_cart">proceed To cart</string>
    <string name="add">Add</string>
    <string name="ordering_from">Ordering from :</string>
    <string name="place_order">place order</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
</resources>