<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homePage"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/favouritePage"
            android:icon="@drawable/ic_favourite"
            android:title="@string/favourite_restaurants" />

        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_order_history"
            android:title="@string/order_history" />

        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />

        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/logOut" />

    </group>
</menu>