<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_violet"
    tools:context=".activity.RegistrationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_violet"
        android:elevation="30dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/etEnterName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="5dp"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:maxLines="1" />

    <TextView
        android:id="@+id/txtNameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEnterName"
        android:layout_marginStart="20dp"
        android:textColor="@color/red"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etEnterName"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etEmailAddress"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_phone_android_24"
        android:drawablePadding="5dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etDelivery"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="5dp"
        android:hint="@string/delivery_address"
        android:inputType="text" />

    <EditText
        android:id="@+id/etChoosePassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etDelivery"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:hint="@string/choose_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <TextView
        android:id="@+id/txtPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etChoosePassword"
        android:layout_marginStart="20dp"
        android:textColor="@color/red"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etChoosePassword"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirmPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/secondary_violet"
        android:text="@string/register"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />

</RelativeLayout>