<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_violet"
    tools:context=".activity.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_violet"
        android:elevation="30dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/imgAppLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/txtMobileNumberAndEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAppLogo"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:text="@string/mobile_number_email"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/txtMobileNumberAndEmail"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_phone_android_24"
        android:drawablePadding="5dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1" />

    <TextView
        android:id="@+id/txtMobileError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginStart="30dp"
        android:textColor="@color/red"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmailAddress"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/secondary_violet"
        android:text="@string/next"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />

</RelativeLayout>