<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_violet"
    tools:context=".activity.ResetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_violet"
        android:elevation="30dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/imgAppLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:src="@drawable/app_logo" />

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/imgAppLogo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:hint="@string/otp"
        android:inputType="text"
        android:maxLength="4"
        android:maxLines="1" />

    <TextView
        android:id="@+id/txtOTPError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etOTP"
        android:layout_marginStart="20dp"
        android:textColor="@color/red"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etChoosePassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etOTP"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <TextView
        android:id="@+id/txtPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etChoosePassword"
        android:layout_marginStart="20dp"
        android:textColor="@color/red"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etChoosePassword"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirmPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/secondary_violet"
        android:text="@string/change_password"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />

</RelativeLayout>