<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RestaurantDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_violet"
            android:elevation="30dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_scrollFlags="scroll|enterAlways"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_margin="10dp"
            android:text="@string/choose_from_the_menu_listed_below"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:drawableRightCompat="@drawable/ic_baseline_favorite_24" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/txtHeading"
            android:background="@android:color/darker_gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRestaurantDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnProceedToCart"
            android:layout_below="@id/divider"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnProceedToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#9e9e9e"
            android:text="@string/proceed_to_cart"
            android:textSize="19sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

        <RelativeLayout
            android:id="@+id/noInternetLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imgNoInternet"
                android:layout_width="250dp"
                android:layout_height="210dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="180dp"
                android:src="@drawable/no_internet" />

            <TextView
                android:id="@+id/txtNoInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgNoInternet"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/no_internet"
                android:textAlignment="center"
                android:textColor="@color/ash"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_below="@+id/txtNoInternet"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:hint="@string/retry"
                android:textColorHint="@color/white"
                android:textSize="15sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExit"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_below="@id/txtNoInternet"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/exit"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                app:strokeColor="@color/ash"
                app:strokeWidth="2dp"
                tools:targetApi="lollipop" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/progressBarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>