<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/homeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp" />

        <RelativeLayout
            android:id="@+id/noInternetLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imgNoInternet"
                android:layout_width="250dp"
                android:layout_height="210dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="180dp"
                android:src="@drawable/no_internet" />

            <TextView
                android:id="@+id/txtNoInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgNoInternet"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/no_internet"
                android:textAlignment="center"
                android:textColor="@color/ash"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_below="@+id/txtNoInternet"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:hint="@string/retry"
                android:textColorHint="@color/white"
                android:textSize="15sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExit"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_below="@id/txtNoInternet"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/exit"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                app:strokeColor="@color/ash"
                app:strokeWidth="2dp"
                tools:targetApi="lollipop" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/progressBarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>